<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/btclienteID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="17dp"
        android:onClick="cliente"
        android:text="@string/cliente"
        app:layout_constraintBottom_toTopOf="@+id/btprodutoID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btprodutoID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="11dp"
        android:onClick="produto"
        android:text="@string/produto"
        app:layout_constraintBottom_toTopOf="@+id/btfornecedorID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btclienteID" />

    <Button
        android:id="@+id/btfornecedorID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="17dp"
        android:onClick="fornecedor"
        android:text="@string/fornecedor"
        app:layout_constraintBottom_toTopOf="@+id/btsairID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btprodutoID" />

    <Button
        android:id="@+id/btsairID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="17dp"
        android:minHeight="48dp"
        android:onClick="sair"
        android:text="@string/sair"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btfornecedorID" />

</androidx.constraintlayout.widget.ConstraintLayout>

